--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
 :root{
-    --color-primar-blue:#00C1FE;
+    --color-primary-blue:#00C1FE;
     --color-lighter-gray:rgba(205, 205, 205, 1);
+    --color-yelow:rgba(250, 255, 193, 1);
 }
 body {
     font-family: 'Montserrat', sans-serif;
-    background: linear-gradient(69.66deg, #00C1FE 19.39%, #FAFFC1 96.69%);
     font-size: 20px;
+}
+.border-primary{
+    border-color:var(--color-primary-blue) !important;
+}
+.text-primary{
+    color: var(--color-primary-blue) !important;
 }
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: var(--color-lighter-gray);
@@ -21,27 +27,69 @@ body {
     color: var(--color-lighter-gray);
 }
 .card-title{
-    border-width: 5px !important;
-    border-color: var(--color-primar-blue) !important;
+    border-width: 7px !important;
+    border-color: var(--color-primary-blue) !important;
 }
 .bg-primary{
-    background-color: var(--color-primar-blue) !important;
+    background-color: var(--color-primary-blue) !important;
+    border-radius: 0.4rem;
 }
 .text-gray{
     color: rgba(108, 108, 108, 1);
 }
-.text-color-primary{
-    color: var(--color-primar-blue) !important;
-}
-.card{
-    border-radius: 20px !important;
+.text-primary{
+    color: var(--color-primary-blue) !important;
 }
 .form-group{
-    margin-bottom: 2rem !important;
+    margin-bottom: 3rem !important;
 }
 .text-underline{
     text-decoration: underline !important;
 }
 .btn{
     font-size: 1.2rem;
+}
+.ic{
+    display: inline-block !important;
+    box-sizing: content-box;
+    background-origin: content-box;
+    height: 1.1rem;
+    width: 1.1rem;
+    margin: auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.ic-payment{
+    background-image: url("../images/ic_payment.svg");
+}
+.ic-report{
+    height: 1.35rem;
+    width: 1rem;
+    overflow: visible;
+    background-image: url("../images/ic-report.svg");
+}
+.ic-settings{
+    background-image: url("../images/ic-settings.svg");
+}
+.ic-log-out{
+    width:1.2rem;
+    height: 0.95rem;
+    background-image: url("../images/ic-log-out.svg");
+}
+.ic-arrow{
+    box-sizing: border-box;
+    background-origin: content-box;
+    background-image: url("../images/ic-arrow.svg");
+    padding:0.1rem;
+}
+.ic-search{
+    box-sizing: border-box;
+    padding: 3px;
+    background-origin: content-box;
+    width: 25px;
+    height: 25px;
+    background-image: url("../images/ic-search.svg");
+}
+.ic-notif{
+    background-image: url("../images/ic-notif.svg");
 }
