--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
 }
-form{
+.navbar form{
     height: 3rem !important;
     padding: 0px !important;
     margin: 0px !important;
@@ -26,7 +26,7 @@ form{
     position: relative !important;
     left:-3rem !important;
 }
-.form-group {
+.navbar .form-group {
     display: inline-flex !important;
     flex-direction: row !important;
 }
