--- a/css/main.css
+++ b/css/main.css
@@ -108,11 +108,12 @@ body {
     font-size: 1.2rem;
 }
 .ic{
+    background-color: red !important;
     display: inline-block !important;
     box-sizing: content-box;
     background-origin: content-box;
-    height: 1.1rem;
-    width: 1.1rem;
+    height: 1.1rem !important;
+    width: 1.1rem !important;
     margin: auto;
     background-repeat: no-repeat;
     background-size: cover;
@@ -130,7 +131,7 @@ body {
     background-image: url("../images/ic-settings.svg");
 }
 .ic-log-out{
-    width:1.4rem !important;
+    width: 1.3rem;
     height: 1rem !important;
     background-image: url("../images/ic-log-out.svg");
 }
@@ -172,6 +173,7 @@ body {
 }
 .ic-home{
     background-image: url('../images/ic-house.svg');
+
 }
 .ic-course{
     background-image: url("../images/ic-course.svg");
