--- a/css/student.css
+++ b/css/student.css
@@ -19,3 +19,10 @@
 .btn-add-students{
     font-size:0.7rem !important
 }
+
+@media (min-width:760px) and (max-width: 1000px){
+    .card-body img{
+        width:100px !important;
+
+    }
+}
